# fastapi-frontend-auth-example

./: README.md  docker-compose.yml
back/: alembic.ini  pyproject.toml
back/app/: database.py  main.py  settings.py
back/app/auth/: crud.py  dependencies.py  helpers.py  models.py  routes.py  schemas.py
back/migrations/: env.py
back/migrations/versions/: 2020-12-20_c6151d23daaa_add_users.py
front/: README.md  package-lock.json  package.json
front/src/: App.vue
front/src/router/: index.js
front/src/views/: GithubCallback.vue  Home.vue
